feat: add discount to transaction
