# internal/payment/controller.go
@@ -142,6 +142,7 @@ func (ctrl *paymentController) createPayment(c fiber.Ctx) error {
 		Currency:           body.Currency,
 		PlatformFee:        body.PlatformFee,
 		ShippingFee:        body.ShippingFee,
+		Discount:           body.Discount,
 		CustomerName:       body.CustomerName,
 		CustomerEmail:      body.CustomerEmail,
 		CustomerMobile:     body.CustomerMobile,
@@ -273,6 +274,7 @@ func (ctrl *paymentController) createManualPayment(c fiber.Ctx) error {
 		Currency:       body.Currency,
 		PlatformFee:    body.PlatformFee,
 		ShippingFee:    body.ShippingFee,
+		Discount:       body.Discount,
 		PaymentMethod:  body.PaymentMethod,
 		PaymentChannel: body.PaymentChannel,
 		Description:    body.Description,
